Mount motion using SMB
NFS doesn't handle server reboots well at all

--- a/host_vars/drepi/vars.yml
+++ b/host_vars/drepi/vars.yml
@@ -1,6 +1,7 @@
 ---
 _ports: {}
 node_exporter_web_listen_address: "0.0.0.0:{{ node_exporter_port }}"
+motion_smb_pass: "{{ vault_motion_smb_pass }}"
 motion_scripts:
   - "after-movie"
   - "after-picture"
