--- a/roles/cadvisor/tasks/main.yml
+++ b/roles/cadvisor/tasks/main.yml
@@ -1,16 +1,13 @@
 ---
 - include: install.yml
   become: true
-  tags:
-    - cadvisor_install
   when:
     - not cadvisor_skip_install
-    - "'skip_install' not in ansible_run_tags"
+  tags: ["install"]
 
 - include: configure.yml
   become: true
-  tags:
-    - cadvisor_configure
+  tags: ["configure"]
 
 - name: ensure cadvisor service is started and enabled
   become: true
@@ -19,5 +16,3 @@
     name: cadvisor
     state: started
     enabled: true
-  tags:
-    - cadvisor_run
