--- a/roles/vouch/tasks/main.yml
+++ b/roles/vouch/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - block:
   - include: download.yml
-    become: true
+    tags: ["install"]
 
   - include: install.yml
     become: true
+    tags: ["install"]
 
-  when: "'skip_install' not in ansible_run_tags"
-
-- include: configure.yml
+  - include: configure.yml
+    tags: ["configure"]
   become: true
