--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
 #!/usr/bin/env -S ansible-galaxy collection install -r
 ---
 collections:
-- community.general
+  - ansible.posix
+  - community.general
