--- a/host_vars/drepi/vars.yml
+++ b/host_vars/drepi/vars.yml
@@ -16,17 +16,33 @@ motion_smb_pass: "{{ vault_motion_smb_pass }}"
 motion_scripts:
   - "after-movie"
   - "after-picture"
-motion_config:
+motion_default_config:
+  daemon: "on"
+  despeckle_filter: "EedDl"
   emulate_motion: "on"
   framerate: "1"
-  movie_codec: "mkv:libx265"
+  width: "1280"
+  height: "720"
+  log_level: "6"
+  mmalcam_name: "vc.ril.camera"
+  movie_codec: "mkv"
+  movie_filename: "%Y%m%d-%H%M%S-%v"
   movie_max_time: "3600"
+  movie_output: "on"
   movie_quality: "60"
   on_movie_end: "{{ motion_script_dir }}/after-movie %f"
   on_picture_save: "{{ motion_script_dir }}/after-picture %f"
+  setup_mode: "off"
+  snapshot_filename: "%Y%m%d-%H%M%S-%v-snapshot"
   snapshot_interval: "7200"
   stream_localhost: "off"
+  stream_maxrate: "1"
+  stream_port: "8081"
+  stream_quality: "60"
+  target_dir: "/var/lib/motion"
   text_left: "ENTRANCE"
-  movie_filename: "%Y%m%d-%H%M%S-%v"
-  picture_filename: "%Y%m%d-%H%M%S-%v"
-  snapshot_filename: "%Y%m%d-%H%M%S-%v-snapshot"
+  text_right: '%Y-%m-%d\n%T-%q'
+  videodevice: "/dev/video0"
+  webcontrol_localhost: "on"
+  webcontrol_parms: "0"
+  webcontrol_port: "0"
