Update motion config

--- a/host_vars/drepi/vars.yml
+++ b/host_vars/drepi/vars.yml
@@ -21,8 +21,8 @@ motion_default_config:
   despeckle_filter: "EedDl"
   emulate_motion: "on"
   framerate: "1"
-  width: "1280"
-  height: "720"
+  width: "1920"
+  height: "1440"
   log_level: "6"
   mmalcam_name: "vc.ril.camera"
   movie_codec: "mkv"
@@ -35,6 +35,7 @@ motion_default_config:
   setup_mode: "off"
   snapshot_filename: "%Y%m%d-%H%M%S-%v-snapshot"
   snapshot_interval: "7200"
+  picture_quality: "90"
   stream_localhost: "off"
   stream_maxrate: "1"
   stream_port: "8081"
@@ -42,7 +43,6 @@ motion_default_config:
   target_dir: "/var/lib/motion"
   text_left: "ENTRANCE"
   text_right: '%Y-%m-%d\n%T-%q'
-  videodevice: "/dev/video0"
   webcontrol_localhost: "on"
   webcontrol_parms: "0"
   webcontrol_port: "0"
