--- a/playbooks/drepi.yml
+++ b/playbooks/drepi.yml
@@ -295,6 +295,10 @@
     - import_role: { name: motion }
       tags: ["motion"]
 
+    - import_role: { name: unattended-upgrades }
+      become: true
+      tags: ["unattended-upgrades"]
+
   post_tasks:
     - block:
       - name: Install smbclient
@@ -330,3 +334,47 @@
           opts: "credentials={{ motion_smb_cred_file }},nofail,uid=motion,gid=adm,file_mode=0640,dir_mode=0750"
       become: true
       tags: ["motion"]
+    - block:
+      - name: install mailx and postfix
+        apt:
+          name:
+            - bsd-mailx
+            - postfix
+          state: present
+
+      # NOTE: manually run dpgk-reconfigure postfix
+      - name: configure postfix
+        lineinfile:
+          dest: "/etc/postfix/main.cf"
+          regexp: "{{ item.regexp }}"
+          line: "{{ item.line }}"
+          state: present
+        with_items:
+          - regexp: "^#?relayhost"
+            line: "relayhost = [{{ smtp_host }}]:{{ smtp_port }}"
+          - regexp: "^#?smtp_use_tls"
+            line: "smtp_use_tls = yes"
+          - regexp: "^#?smtp_sasl_auth_enable"
+            line: "smtp_sasl_auth_enable = yes"
+          - regexp: "^#?smtp_sasl_security_options"
+            line: "smtp_sasl_security_options ="
+          - regexp: "^#?smtp_sasl_password_maps"
+            line: "smtp_sasl_password_maps = hash:/etc/postfix/sasl_passwd"
+          - regexp: "^#?smtp_tls_CAfile"
+            line: "smtp_tls_CAfile = /etc/ssl/certs/ca-certificates.crt"
+
+      - name: configure postfix sasl_password
+        copy:
+          dest: /etc/postfix/sasl_passwd
+          owner: root
+          group: root
+          mode: 0600
+          content: |
+            [{{ smtp_host }}]:{{ smtp_port }}    {{ smtp_user }}:{{ smtp_pass }}
+        register: sasl_password
+
+      - name: regenerate sasl_passwd.db
+        command: "/usr/sbin/postmap /etc/postfix/sasl_passwd"
+        when: sasl_password.changed
+      become: true
+      tags: ["unattended-upgrades"]
