--- a/host_vars/drepi/vars.yml
+++ b/host_vars/drepi/vars.yml
@@ -30,8 +30,12 @@ motion_scripts:
 motion_default_config:
   daemon: "on"
   despeckle_filter: "EedDl"
-  emulate_motion: "on"
-  framerate: "2"
+  emulate_motion: "off"
+  event_gap: "100"    # 20s
+  pre_capture: "5"    # 1s
+  post_capture: "300" # 60s
+  minimum_motion_frames: "10"
+  framerate: "5"
   width: "1600"
   height: "1200"
   log_level: "6"
@@ -39,19 +43,21 @@ motion_default_config:
   mmalcam_control_params: "--flicker=50hz --exposure=auto --awb=auto --drc=low --mode=4"
   movie_codec: "mkv"
   movie_filename: "%Y%m%d-%H%M%S-%v"
-  movie_max_time: "3600"
+  movie_max_time: "300"
   movie_output: "on"
   movie_quality: "80"
-  on_movie_end: "{{ motion_script_dir }}/after-movie %f"
+  on_movie_end: "MINIMUM_SIZE_MB=10 {{ motion_script_dir }}/after-movie %f"
   on_picture_save: "{{ motion_script_dir }}/after-picture %f"
   setup_mode: "off"
   snapshot_filename: "%Y%m%d-%H%M%S-snapshot"
   snapshot_interval: "7200"
   picture_quality: "90"
   stream_localhost: "off"
-  stream_maxrate: "1"
+  stream_maxrate: "2"
   stream_port: "8081"
-  stream_quality: "60"
+  stream_quality: "80"
+  # threshold: "1500"
+  threshold_tune: "1"
   target_dir: "/var/lib/motion"
   text_left: "ENTRANCE"
   text_right: '%Y-%m-%d\n%T-%q'
