--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -6,3 +6,12 @@ server_ssh_port: "{{ vault_server_ssh_port }}"
 server_local_ip: 10.0.0.2
 ports:
   node_exporter: 9100
+
+locale_gen:
+  - "en_US.UTF-8"
+  - "en_GB.UTF-8"
+  - "nb_NO.UTF-8"
+
+locale_conf:
+  LANG: en_US.UTF-8
+  LC_TIME: en_GB.UTF-8
