Add basic sudo role

--- a/host_vars/desktop/arch.yml
+++ b/host_vars/desktop/arch.yml
@@ -4,6 +4,14 @@ kernels:
   - "linux-lts"
   - "linux-zen"
 
+sudoers_files:
+  - dest: "10-wheel"
+    content: "%wheel ALL=(ALL) ALL"
+  - dest: "30-openconnect"
+    content: "{{ my_user }} ALL=(root) NOPASSWD: /usr/bin/openconnect"
+  - dest: "30-podman"
+    content: "{{ my_user }} ALL=(root) NOPASSWD: /usr/bin/podman"
+
 mkinitcpio_no_fallback: "{{ kernels }}"
 
 network_manager: "systemd-networkd"
