--- a/roles/arch-common/defaults/main.yml
+++ b/roles/arch-common/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 
+sudoers_files:
+  - dest: "10-wheel"
+    content: "%wheel ALL=(ALL) ALL"
 sys_timezone: "Europe/Oslo"
 
 network_manager: "systemd-networkd"
