--- a/playbooks/desktop.yml
+++ b/playbooks/desktop.yml
@@ -39,6 +39,8 @@
     - import_role: { name: discord }
       tags: ["discord"]
 
+    - import_role: { name: sshd }
+      tags: ["sshd"]
 
     - import_role: { name: sudo }
       tags: ["sudo"]
